--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <header id="header">
   <div class="menu-btn" id="menuBtn" onclick="toggleMenu()">☰</div>
-  <div class="title">VAPORS KE</div>
+  <div class="title">Vapors Prešov</div>
   <div class="header-actions">
     <div class="lang-currency">
       <select id="langSelect" onchange="setLang(this.value)">
