--- a/index.html
+++ b/index.html
@@ -18,42 +18,47 @@
     <div class="option-group">
       <p class="muted" data-i18n="delivery">Способ доставки</p>
 
-<label>
-  <input type="radio" name="delivery" value="pickup_prazska">
-  <span data-i18n="pickup_prazska"></span>
-</label>
+    <label>
+      <input type="radio" name="delivery" value="pickup_dorm">
+      <span data-i18n="pickup_dorm"></span>
+    </label>
 
-<label>
-  <input type="radio" name="delivery" value="pickup_aupark">
-  <span data-i18n="pickup_aupark"></span>
-</label>
+    <label>
+      <input type="radio" name="delivery" value="delivery_presov">
+      <span data-i18n="delivery_presov"></span>
+    </label>
 
-<label>
-  <input type="radio" name="delivery" value="pickup_tuke">
-  <span data-i18n="pickup_tuke"></span>
-</label>
+    <label>
+      <input type="radio" name="delivery" value="delivery_slovakia">
+      <span data-i18n="delivery_slovakia"></span>
+    </label>
+
+    <label>
+      <input type="radio" name="delivery" value="delivery_europe">
+      <span data-i18n="delivery_europe"></span>
+    </label>
 
     </div>
 
     <div class="option-group">
       <p class="muted" data-i18n="payment">Способ оплаты</p>
 
-<label>
-  <input type="radio" name="payment" value="ua_card">
-  <span data-i18n="pay_ua_card"></span>
-</label>
-<label>
-  <input type="radio" name="payment" value="tatra">
-  <span data-i18n="pay_tatra"></span>
-</label>
-<label>
-  <input type="radio" name="payment" value="cash">
-  <span data-i18n="pay_cash"></span>
-</label>
-<label>
-  <input type="radio" name="payment" value="usdt">
-  <span data-i18n="pay_usdt"></span>
-</label>
+    <label>
+      <input type="radio" name="payment" value="ua_card">
+      <span data-i18n="pay_ua_card"></span>
+    </label>
+    <label>
+      <input type="radio" name="payment" value="tatra">
+      <span data-i18n="pay_tatra"></span>
+    </label>
+    <label>
+      <input type="radio" name="payment" value="cash">
+      <span data-i18n="pay_cash"></span>
+    </label>
+    <label>
+      <input type="radio" name="payment" value="usdt">
+      <span data-i18n="pay_usdt"></span>
+    </label>
 
       <!-- Сдача (только для наличных) -->
 <div class="option-group hidden" id="cashChangeBlock">
